@startuml
class EntreCalle{
-ubicacion:Direccion
+llenarCalles()
+obtenerCalleSuperior():Calle
+obtenerCalleInferior():Calle
+obtenerCalleIzquierda():Calle
+obtenerCalleDerecha():Calle

}

class Calle{
+entreCallePrimera():EntreCalle
+entreCalleSegunda():EntreCalle
+otraCasillero(unaCasillero:EntreCalle):EntreCalle
+obstaculo():Obstaculo
}

interface Obstaculo{
+pasarObstaculo(unAuto:Auto, unJugador:Jugador)
+pasarObstaculo(unaCamioneta:CuatroXCuatro, unJugador:Jugador)
+pasarObstaculo(unaMoto:Moto, unJugador:Jugador)
}


class CuatroXCuatro{
-pozosAtravesados:Int
+sumarVecesPasadosEnPozo():Int
+initialize()
}

class Auto{
+initialize()
}

class Moto{
+initialize()
}

Calle "4"--"2" EntreCalle
Calle --> Obstaculo
Obstaculo ..> Auto
Obstaculo ..> CuatroXCuatro
Obstaculo ..> Moto



@enduml
